samples/_failures_safe/1761415163_78cb1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8da638d2.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_8da638d2.c:176:5: error: expected expression at end of input
  176 |     node->right =
      |     ^~~~
./samples/SAFE/__tmp_8da638d2.c:176:5: error: expected declaration or statement at end of input
